Nur INhalt anpassung SV Introtext

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <h1>Curriculum Vitae <br><span style="color: var(--main-brand-color)">Joel Bühler</span></h1>
-            <p class="subheading">Herzlich wilkommen auf meiner CV Webseite weclhe für Ausbildungszwecke an der HFTM verwendet wird.</p>
+            <p class="subheading">Herzlich wilkommen auf meiner CV Webseite welche ich im Rahmen meines Studiums an der HFTM erarbeitet habe.</p>
         </div>
         <div class="circle">
             <img src="bilder/1701434086747.png" alt="Mugshot">
