--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -38,23 +38,10 @@
         <div class="lebenslauf_container">
             <h2>Bildung</h2>
             <h3>Sprachen</h3>
-                <table>
-                        <tr>
-                            <th>Sprache</th>
-                            <th>Kenntnisse</th>
-                            <th>Zertifizierung</th>
-                        </tr>
-                        <tr>
-                            <td data-label="Sprache">Deutsch</td>
-                            <td data-label="Kenntnisse">Muttersprache</td> 
-                            <td data-label="Zertifizierung">Schulbildung</td> 
-                        </tr>
-                        <tr>
-                            <td data-label="Sprache">Englisch</td>
-                            <td data-label="Kenntnisse">Sehr gute Kenntnisse sprechen, verstehen, lesen und schreiben</td> 
-                            <td data-label="Zertifizierung">First C1</td> 
-                        </tr>
-                </table>
+            <ul>
+                <li>Deutsch: Muttersprache</li>
+                <li>Englisch: Sehr gute Kenntnisse, C1</li>
+            </ul>
             <h3>Schulbildung</h3>
             <table>
                     <tr>
