anpassung tabellen & co im neuen Index File

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <section id="lebenslauf_section">
-        <img src="bilder/SCR-20240703-svau.jpeg">
+        <img src="bilder/SCR-20240703-svau.jpeg" alt="Lebenslauf Bild">
         <div class="lebenslauf_container">
             <h2>Bildung</h2>
             <h3>Sprachen</h3>
@@ -43,28 +43,34 @@
                 <li>Englisch: Sehr gute Kenntnisse, C1</li>
             </ul>
             <h3>Schulbildung</h3>
-            <table>
-                    <tr>
-                        <th>Zeitraum</th>
-                        <th>Abschluss</th>
-                        <th>Schule</th>
-                    </tr>
-                    <tr>
-                        <td data-label="Zeitraum">2009 bis 2014</td>
-                        <td data-label="Abschluss">Sekundarstufe E</td> 
-                        <td data-label="Schule">Oz13 Subingen</td> 
-                    </tr>
-                    <tr>
-                        <td data-label="Zeitraum">2014 bis 2018</td>
-                        <td data-label="Abschluss">Informatiker Systemtechniker</td> 
-                        <td data-label="Schule">Gewerbliche Industrielle Berufsfachschlue GIBS Solothurn</td> 
-                    </tr>
-                    <tr>
-                        <td data-label="Zeitraum">2023 bis 2026</td>
-                        <td data-label="Abschluss">Techniker HF</td> 
-                        <td data-label="Schule">HFTM Grenchen</td> 
-                    </tr>
-            </table>
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Zeitraum</th>
+                            <th>Abschluss</th>
+                            <th>Schule</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td data-label="Zeitraum">2009 bis 2014</td>
+                            <td data-label="Abschluss">Sekundarstufe E</td> 
+                            <td data-label="Schule">Oz13 Subingen</td> 
+                        </tr>
+                        <tr>
+                            <td data-label="Zeitraum">2014 bis 2018</td>
+                            <td data-label="Abschluss">Informatiker EFZ</td> 
+                            <td data-label="Schule">GIBS Solothurn</td> 
+                        </tr>
+                        <tr>
+                            <td data-label="Zeitraum">2023 bis 2026</td>
+                            <td data-label="Abschluss">Techniker HF</td> 
+                            <td data-label="Schule">HFTM Grenchen</td> 
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </section>
     <section id="werdegang_section">
