werdegang responsive design erstellt

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -33,119 +33,82 @@
             <img src="bilder/1701434086747.png" alt="Mugshot">
         </div>
     </header>
-    <section id="lebenslauf_section">
-        <img src="bilder/SCR-20240703-svau.jpeg" alt="Lebenslauf Bild">
-        <div class="lebenslauf_container">
-            <h2>Bildung</h2>
-            <h3>Sprachen</h3>
-            <table>
-                <tr>
-                    <th>Sprache</th>
-                    <th>Kenntnisse</th>
-                    <th>Zertifizierung</th>
-                </tr>
-                <tr>
-                    <td data-label="Sprache">Deutsch</td>
-                    <td data-label="Kenntnisse">Muttersprache</td> 
-                    <td data-label="Zertifizierung">Schulbildung</td> 
-                </tr>
-                <tr>
-                    <td data-label="Sprache">Englisch</td>
-                    <td data-label="Kenntnisse">Sehr gut</td> 
-                    <td data-label="Zertifizierung">First C1</td> 
-                </tr>
-        </table>
-            <h3>Schulbildung</h3>
+    <section id="werdegang_section">
+        <h2>Beruflicher Werdegang</h2>
+        <div class="werdegang_container">
             <div class="table-container">
                 <table>
                     <thead>
                         <tr>
                             <th>Zeitraum</th>
-                            <th>Abschluss</th>
-                            <th>Schule</th>
+                            <th>Rolle & Tätigkeiten</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td data-label="Zeitraum">2009 bis 2014</td>
-                            <td data-label="Abschluss">Sekundarstufe E</td> 
-                            <td data-label="Schule">Oz13 Subingen</td> 
+                            <td data-label="Zeitraum">2023 bis heute</td>
+                            <td data-label="Rolle & Tätigkeiten">
+                                <b>Head of ACC <br></b>
+                                <p>BDO AG in Solothurn</p>
+                                <ul>
+                                    <li>Teamleitung Azure Cloud Competence Center</li>
+                                    <li>Mitglied der Informatikleitung</li>
+                                    <li>Personalführung Infrastruktur und Plattform Team</li>
+                                    <li>Unterhalt von Backup und Firewallsystemen</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td data-label="Zeitraum">2021 bis 2023</td>
+                            <td data-label="Rolle & Tätigkeiten">
+                                <b>Systemtechniker <br> BDO AG in Solothurn</b>
+                                <ul>
+                                    <li>Architektur von Backup-, Storagesystemen und Firewallsystemen</li>
+                                    <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
+                                    <li>Migration eines Georedundanten RZ nach Microsoft Azure</li>
+                                    <li>Massgebende Mitarbeit bei der Migration von SAP S/4 HANA</li>
+                                    <li>Architektur & Aufbau neuer Backup & Storagelösungen in Azure</li>
+                                    <li>Architektur & Aufbau neuer Monitoringlösung in Azure</li>
+                                    <li>Architektur & Aufbau Azure Application Gateway Reverse Proxy</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td data-label="Zeitraum">2019 bis 2021</td>
+                            <td data-label="Rolle & Tätigkeiten">
+                                <b>Junior Systemtechniker<br> BDO AG in Solothurn</b>
+                                <ul>
+                                    <li>Betreiben und Administrieren von Backup-, Storage- und Firewallsystemen</li>
+                                    <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
+                                    <li>Administrieren und Erstellen Reverse Proxy (Netscaler)</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td data-label="Zeitraum">2018 bis 2019</td>
+                            <td data-label="Rolle & Tätigkeiten">
+                                <b>Militär Durchdiener Führungsunterstützung</b>
+                                <ul>
+                                    <li>Zusatzausbildung zum Fahrer C1</li>
+                                    <li>Abschluss der Militärpflicht</li>
+                                </ul>
+                            </td>
                         </tr>
                         <tr>
                             <td data-label="Zeitraum">2014 bis 2018</td>
-                            <td data-label="Abschluss">Informatiker EFZ</td> 
-                            <td data-label="Schule">GIBS Solothurn</td> 
-                        </tr>
-                        <tr>
-                            <td data-label="Zeitraum">2023 bis 2026</td>
-                            <td data-label="Abschluss">Techniker HF</td> 
-                            <td data-label="Schule">HFTM Grenchen</td> 
+                            <td data-label="Rolle & Tätigkeiten">
+                                <b>Lehre als Systemtechniker EFZ <br> BDO AG in Solothurn</b>
+                                <ul>
+                                    <li>Alle Module gemäss Lehrplan</li>
+                                    <li>Aufbau eines Georedundanten Rechenzentrums</li>
+                                    <li>Inbetriebnahme IT Systeme</li>
+                                    <li>Arbeiten mit Kundenkontakt</li>
+                                </ul>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-        </div>
-    </section>
-    <section id="werdegang_section">
-        <h2>Beruflicher Werdegang</h2>
-        <div class="werdegang_container">
-            <table>
-                <tr>
-                    <th>Zeitraum</th>
-                    <th>Rolle & Tätigkeiten</th>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2023 bis heute </td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Head of ACC <br></b>
-                        <p>BDO AG in Solothurn</p>
-                        <li>Teamleitung Azure Cloud Competence Center</li>
-                        <li>Mitglied der Informatikleitung</li>
-                        <li>Personalführung Infrastruktur und Plattform Team</li>
-                        <li>Unterhalt von Backup und Firewallsystemen</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2021 bis 2023</td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Systemtechniker <br> BDO AG in Solothurn</b>
-                        <li>Architektur von Backup-, Storagesystemen und Firewallsystemen</li>
-                        <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
-                        <li>Migration eines Georedundanten RZ nach Microsoft Azure</li>
-                            <li>Massgebende Mitarbeit bei der Migration von SAP S/4 HANA</li>
-                            <li>Architektur & Aufbau neuer Backup & Storagelösungen in Azure</li>
-                            <li>Architektur & Aufbau neuer Monitoringlösung in Azure</li>
-                            <li>Architektur & Aufbau Azure Application Gateway Reverse Proxy</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2019 bis 2021</td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Junior Systemtechniker<br> BDO AG in Solothurn</b>
-                        <li>Betreiben und Administrieren von Backup-, Storage- und Firewallsystemen</li>
-                        <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
-                        <li>Administrieren und Erstellen Reverse Proxy (Netscaler)</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2018 bis 2019</td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Militär Durchdiener Führungsunterstützung</b>
-                        <li>Zusatzausbildung zum Fahrer C1</li>
-                        <li>Abschluss der Militärpflicht</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2014 bis 2018</td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Lehre als Systemtechniker EFZ <br> BDO AG in Solothurn</b>
-                        <li>Alle Modulge gemäss Lehrplan</li>
-                        <li>Aufbau eines Georedundanten Rechenzentrum</li>
-                        <li>Inbetriebnahme IT Systeme</li>
-                        <li>Arbeiten mit Kundenkontakt</li>
-                    </td>
-                </tr>
-            </table>
         </div>
     </section>
     <section id="knowhow_section">
