Werdegang Tabelle in Paragraphen und UL umgewandelt

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -53,7 +53,7 @@
                     <td data-label="Sprache">Englisch</td>
                     <td data-label="Kenntnisse">Sehr gut</td> 
                     <td data-label="Zertifizierung">First C1</td> 
-                </tr>
+                </tr> 
         </table>
             <h3>Schulbildung</h3>
             <div class="table-container">
@@ -89,63 +89,56 @@
     <section id="werdegang_section">
         <h2>Beruflicher Werdegang</h2>
         <div class="werdegang_container">
-            <table>
-                <tr>
-                    <th>Zeitraum</th>
-                    <th>Rolle & Tätigkeiten</th>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2023 bis heute </td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Head of ACC <br></b>
-                        <p>BDO AG in Solothurn</p>
-                        <li>Teamleitung Azure Cloud Competence Center</li>
-                        <li>Mitglied der Informatikleitung</li>
-                        <li>Personalführung Infrastruktur und Plattform Team</li>
-                        <li>Unterhalt von Backup und Firewallsystemen</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2021 bis 2023</td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Systemtechniker <br> BDO AG in Solothurn</b>
-                        <li>Architektur von Backup-, Storagesystemen und Firewallsystemen</li>
-                        <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
-                        <li>Migration eines Georedundanten RZ nach Microsoft Azure</li>
-                            <li>Massgebende Mitarbeit bei der Migration von SAP S/4 HANA</li>
-                            <li>Architektur & Aufbau neuer Backup & Storagelösungen in Azure</li>
-                            <li>Architektur & Aufbau neuer Monitoringlösung in Azure</li>
-                            <li>Architektur & Aufbau Azure Application Gateway Reverse Proxy</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2019 bis 2021</td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Junior Systemtechniker<br> BDO AG in Solothurn</b>
-                        <li>Betreiben und Administrieren von Backup-, Storage- und Firewallsystemen</li>
-                        <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
-                        <li>Administrieren und Erstellen Reverse Proxy (Netscaler)</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2018 bis 2019</td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Militär Durchdiener Führungsunterstützung</b>
-                        <li>Zusatzausbildung zum Fahrer C1</li>
-                        <li>Abschluss der Militärpflicht</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td data-label="Zeitraum">2014 bis 2018</td>
-                    <td data-label="Rolle & Tätigkeiten">
-                        <b>Lehre als Systemtechniker EFZ <br> BDO AG in Solothurn</b>
-                        <li>Alle Modulge gemäss Lehrplan</li>
-                        <li>Aufbau eines Georedundanten Rechenzentrum</li>
-                        <li>Inbetriebnahme IT Systeme</li>
-                        <li>Arbeiten mit Kundenkontakt</li>
-                    </td>
-                </tr>
-            </table>
+            <div>
+                <h4>2023 bis heute</h4>
+                <p>Head of ACC bei BDO AG in Solothurn</p>
+                <ul>
+                    <li>Teamleitung Azure Cloud Competence Center</li>
+                    <li>Mitglied der Informatikleitung</li>
+                    <li>Personalführung Infrastruktur und Plattform Team</li>
+                    <li>Fachlead Backup & Storage</li>
+                </ul>
+            </div>
+            <div>
+                <h4>2021 bis 2023</h4>
+                <p>Systemtechniker bei BDO AG in Solothurn</p>
+                <ul>
+                    <li>Architektur von Backup-, Storagesystemen und Firewallsystemen</li>
+                    <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
+                    <li>Migration eines Georedundanten RZ nach Microsoft Azure</li>
+                        <li>Massgebende Mitarbeit bei der Migration von SAP S/4 HANA</li>
+                        <li>Architektur & Aufbau neuer Backup & Storagelösungen in Azure</li>
+                        <li>Architektur & Aufbau neuer Monitoringlösung in Azure</li>
+                        <li>Architektur & Aufbau Azure Application Gateway Reverse Proxy</li>
+                </ul>
+            </div>
+            <div>
+                <h4>2019 bis 2021</h4>
+                <p>Junior System Engineer bei BDO AG in Solothurn</p>
+                <ul>
+                    <li>Betreiben und Administrieren von Backup-, Storage- und Firewallsystemen</li>
+                    <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
+                    <li>Administrieren und Erstellen Reverse Proxy (Netscaler)</li>
+                </ul>
+            </div>
+            <div>
+                <h4>2018 bis 2019</h4>
+                <p>Militär Durchdiener Führungsunterstützung</p>
+                <ul>
+                    <li>Zusatzausbildung zum Fahrer C1</li>
+                    <li>Abschluss der Militärpflicht</li>
+                </ul>
+            </div>
+            <div>
+                <h4>2014 bis 2018</h4>
+                <p>Lehre als Systemtechniker EFZ bei BDO AG in Solothurn</p>
+                <ul>
+                    <li>Alle Modulge gemäss Lehrplan</li>
+                    <li>Aufbau eines Georedundanten Rechenzentrum</li>
+                    <li>Inbetriebnahme IT Systeme</li>
+                    <li>Arbeiten mit Kundenkontakt</li>
+                </ul>
+            </div>
         </div>
     </section>
     <section id="knowhow_section">
