--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -91,7 +91,7 @@
         <div class="werdegang_container">
             <div>
                 <h4>2023 bis heute</h4>
-                <p>Head of ACC bei BDO AG in Solothurn</p>
+                <h5>Head of ACC bei BDO AG in Solothurn</h5>
                 <ul>
                     <li>Teamleitung Azure Cloud Competence Center</li>
                     <li>Mitglied der Informatikleitung</li>
@@ -101,7 +101,7 @@
             </div>
             <div>
                 <h4>2021 bis 2023</h4>
-                <p>Systemtechniker bei BDO AG in Solothurn</p>
+                <h5>Systemtechniker bei BDO AG in Solothurn</h5>
                 <ul>
                     <li>Architektur von Backup-, Storagesystemen und Firewallsystemen</li>
                     <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
@@ -114,7 +114,7 @@
             </div>
             <div>
                 <h4>2019 bis 2021</h4>
-                <p>Junior System Engineer bei BDO AG in Solothurn</p>
+                <h5>Junior System Engineer bei BDO AG in Solothurn</h5>
                 <ul>
                     <li>Betreiben und Administrieren von Backup-, Storage- und Firewallsystemen</li>
                     <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
@@ -123,7 +123,7 @@
             </div>
             <div>
                 <h4>2018 bis 2019</h4>
-                <p>Militär Durchdiener Führungsunterstützung</p>
+                <h5>Militär Durchdiener Führungsunterstützung</h5>
                 <ul>
                     <li>Zusatzausbildung zum Fahrer C1</li>
                     <li>Abschluss der Militärpflicht</li>
@@ -131,7 +131,7 @@
             </div>
             <div>
                 <h4>2014 bis 2018</h4>
-                <p>Lehre als Systemtechniker EFZ bei BDO AG in Solothurn</p>
+                <h5>Lehre als Systemtechniker EFZ bei BDO AG in Solothurn</h5>
                 <ul>
                     <li>Alle Modulge gemäss Lehrplan</li>
                     <li>Aufbau eines Georedundanten Rechenzentrum</li>
