--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -33,6 +33,52 @@
             <img src="bilder/1701434086747.png" alt="Mugshot">
         </div>
     </header>
+    <section id="knowhow_section">
+        <h2>Skills & Zertifi&shyzierungen</h2>
+        <div class="flex_container">
+            <div class="card">
+                <h3>AZ-904 Azure Fundamentals</h3>
+                <img src="bilder/microsoft-certified-fundamentals-badge.svg">
+                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/5BC6E2D6302C1106?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
+            </div>
+            <div class="card">
+                <h3>AZ-104 Azure Administrator</h3>
+                <img src="bilder/microsoft-certified-associate-badge.svg">
+                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/9F1C5268466F96AD?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
+            </div>
+            <div class="card">
+                <h3>AZ-304 Azure Architect Design</h3>
+                <img src="bilder/microsoft-certified-expert-badge.svg">
+                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/99DAB36D2F116BFF?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
+            </div>
+            <div class="card">
+                <h3>Azure SAP Specialty</h3>
+                <img src="bilder/microsoft-certified-specialty-badge.svg">
+                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/C106A01A2F9E7F22?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
+            </div>
+            <div class="card">
+                <h3>Fortigate Kenntnisse</h3>
+                <div class="chart-container">
+                    <canvas id="fortigateChart"></canvas>
+                    <div id="fortigatePercentage" class="percentage">80%</div>
+                </div>
+            </div>
+            <div class="card">
+                <h3>Cisco Kenntnisse</h3>
+                <div class="chart-container">
+                    <canvas id="ciscoChart"></canvas>
+                    <div id="ciscoPercentage" class="percentage">70%</div>
+                </div>
+            </div>
+            <div class="card">
+                <h3>Linux Kenntnisse</h3>
+                <div class="chart-container">
+                    <canvas id="linuxChart"></canvas>
+                    <div id="linuxPercentage" class="percentage">90%</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="lebenslauf_section">
         <img src="bilder/SCR-20240703-svau.jpeg" alt="Lebenslauf Bild">
         <div class="lebenslauf_container">
@@ -138,54 +184,6 @@
                     <li>Inbetriebnahme IT Systeme</li>
                     <li>Arbeiten mit Kundenkontakt</li>
                 </ul>
-            </div>
-        </div>
-    </section>
-    <section id="knowhow_section">
-        <h2>Zertifi&shyzierungen</h2>
-        <div class="flex_container">
-            <div class="card">
-                <h3>AZ-904 Azure Fundamentals</h3>
-                <img src="bilder/microsoft-certified-fundamentals-badge.svg">
-                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/5BC6E2D6302C1106?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
-            </div>
-            <div class="card">
-                <h3>AZ-104 Azure Administrator</h3>
-                <img src="bilder/microsoft-certified-associate-badge.svg">
-                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/9F1C5268466F96AD?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
-            </div>
-            <div class="card">
-                <h3>AZ-304 Azure Architect Design</h3>
-                <img src="bilder/microsoft-certified-expert-badge.svg">
-                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/99DAB36D2F116BFF?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
-            </div>
-            <div class="card">
-                <h3>Azure SAP Specialty</h3>
-                <img src="bilder/microsoft-certified-specialty-badge.svg">
-                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/C106A01A2F9E7F22?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
-            </div>
-            <div class="card">
-                <h3>Fortigate Kenntnisse</h3>
-                <div class="chart-container">
-                    <canvas id="fortigateChart"></canvas>
-                    <div id="fortigatePercentage" class="percentage">80%</div>
-                </div>
-            </div>
-            
-            <div class="card">
-                <h3>Cisco Kenntnisse</h3>
-                <div class="chart-container">
-                    <canvas id="ciscoChart"></canvas>
-                    <div id="ciscoPercentage" class="percentage">70%</div>
-                </div>
-            </div>
-
-            <div class="card">
-                <h3>Linux Kenntnisse</h3>
-                <div class="chart-container">
-                    <canvas id="linuxChart"></canvas>
-                    <div id="linuxPercentage" class="percentage">90%</div>
-                </div>
             </div>
         </div>
     </section>
