Anpassen der Hintegrundfarben

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -98,7 +98,7 @@
                 <tr>
                     <td data-label="Sprache">Englisch</td>
                     <td data-label="Kenntnisse">Sehr gut</td> 
-                    <td data-label="Zertifizierung">First C1</td> 
+                    <td data-label="Zertifizierung">First B2</td> 
                 </tr> 
         </table>
             <h3>Schulbildung</h3>
