Anpassung Wording Werdegang & TExtgrössen Werdegang

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -137,7 +137,7 @@
         <div class="werdegang_container">
             <div>
                 <h4>2023 bis heute</h4>
-                <h5>Head of ACC bei BDO AG in Solothurn</h5>
+                <h5>Head of ACC bei BDO AG</h5>
                 <ul>
                     <li>Teamleitung Azure Cloud Competence Center</li>
                     <li>Mitglied der Informatikleitung</li>
@@ -147,7 +147,7 @@
             </div>
             <div>
                 <h4>2021 bis 2023</h4>
-                <h5>Systemtechniker bei BDO AG in Solothurn</h5>
+                <h5>Systemtechniker bei BDO AG</h5>
                 <ul>
                     <li>Architektur von Backup-, Storagesystemen und Firewallsystemen</li>
                     <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
@@ -160,7 +160,7 @@
             </div>
             <div>
                 <h4>2019 bis 2021</h4>
-                <h5>Junior System Engineer bei BDO AG in Solothurn</h5>
+                <h5>Junior System Engineer bei BDO</h5>
                 <ul>
                     <li>Betreiben und Administrieren von Backup-, Storage- und Firewallsystemen</li>
                     <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
@@ -169,10 +169,10 @@
             </div>
             <div>
                 <h4>2018 bis 2019</h4>
-                <h5>Militär Durchdiener Führungsunterstützung</h5>
+                <h5>Militär Führungsunterstützung</h5>
                 <ul>
                     <li>Zusatzausbildung zum Fahrer C1</li>
-                    <li>Abschluss der Militärpflicht</li>
+                    <li>Abschluss der Militärdienstpflicht</li>
                 </ul>
             </div>
             <div>
