--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -177,7 +177,7 @@
             </div>
             <div>
                 <h4>2014 bis 2018</h4>
-                <h5>Lehre als Systemtechniker EFZ bei BDO AG in Solothurn</h5>
+                <h5>Lehre als Systemtechniker EFZ bei BDO AG</h5>
                 <ul>
                     <li>Alle Modulge gemäss Lehrplan</li>
                     <li>Aufbau eines Georedundanten Rechenzentrum</li>
