anpassung knowhow & skills auf grid layout anstelle flexbox

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -34,27 +34,27 @@
         </div>
     </header>
     <section id="knowhow_section">
-        <h2>Skills & Zertifi&shyzierungen</h2>
-        <div class="flex_container">
+        <h2>Skills & Zertifizierungen</h2>
+        <div class="grid_container">
             <div class="card">
                 <h3>AZ-904 Azure Fundamentals</h3>
-                <img src="bilder/microsoft-certified-fundamentals-badge.svg">
-                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/5BC6E2D6302C1106?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
+                <img src="bilder/microsoft-certified-fundamentals-badge.svg" alt="Azure Fundamentals Badge">
+                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/5BC6E2D6302C1106?sharingId=F1983754E9A4C4B3" target="_blank">Zertifizierung anzeigen</a>
             </div>
             <div class="card">
                 <h3>AZ-104 Azure Administrator</h3>
-                <img src="bilder/microsoft-certified-associate-badge.svg">
-                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/9F1C5268466F96AD?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
+                <img src="bilder/microsoft-certified-associate-badge.svg" alt="Azure Administrator Badge">
+                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/9F1C5268466F96AD?sharingId=F1983754E9A4C4B3" target="_blank">Zertifizierung anzeigen</a>
             </div>
             <div class="card">
                 <h3>AZ-304 Azure Architect Design</h3>
-                <img src="bilder/microsoft-certified-expert-badge.svg">
-                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/99DAB36D2F116BFF?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
+                <img src="bilder/microsoft-certified-expert-badge.svg" alt="Azure Architect Design Badge">
+                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/99DAB36D2F116BFF?sharingId=F1983754E9A4C4B3" target="_blank">Zertifizierung anzeigen</a>
             </div>
             <div class="card">
                 <h3>Azure SAP Specialty</h3>
-                <img src="bilder/microsoft-certified-specialty-badge.svg">
-                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/C106A01A2F9E7F22?sharingId=F1983754E9A4C4B3">Zertifizierung anzeigen</a>
+                <img src="bilder/microsoft-certified-specialty-badge.svg" alt="Azure SAP Specialty Badge">
+                <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/C106A01A2F9E7F22?sharingId=F1983754E9A4C4B3" target="_blank">Zertifizierung anzeigen</a>
             </div>
             <div class="card">
                 <h3>Fortigate Kenntnisse</h3>
