ANpassungen Skills & knowhow. Animation mit sternen js, css und html angepasst

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -56,26 +56,49 @@
                 <img src="bilder/microsoft-certified-specialty-badge.svg" alt="Azure SAP Specialty Badge">
                 <a href="https://learn.microsoft.com/api/credentials/share/de-de/BuehlerJoel-2583/C106A01A2F9E7F22?sharingId=F1983754E9A4C4B3" target="_blank">Zertifizierung anzeigen</a>
             </div>
-            <div class="card">
-                <h3>Fortigate Kenntnisse</h3>
-                <div class="chart-container">
-                    <canvas id="fortigateChart"></canvas>
-                    <div id="fortigatePercentage" class="percentage">80%</div>
+            <div class="card" data-rating="4">
+                <h3>Verwaltung Storage Systeme</h3>
+                <div class="rating-container">
+                    <span class="star" data-value="1">&#9733;</span>
+                    <span class="star" data-value="2">&#9733;</span>
+                    <span class="star" data-value="3">&#9733;</span>
+                    <span class="star" data-value="4">&#9733;</span>
+                    <span class="star" data-value="5">&#9733;</span>
                 </div>
+                <p class="description">Betrieb NetApp FAS georedundanter Metrocluster</p>
             </div>
-            <div class="card">
-                <h3>Cisco Kenntnisse</h3>
-                <div class="chart-container">
-                    <canvas id="ciscoChart"></canvas>
-                    <div id="ciscoPercentage" class="percentage">70%</div>
+            <div class="card" data-rating="4">
+                <h3>Administration Firewall Systeme</h3>
+                <div class="rating-container">
+                    <span class="star" data-value="1">&#9733;</span>
+                    <span class="star" data-value="2">&#9733;</span>
+                    <span class="star" data-value="3">&#9733;</span>
+                    <span class="star" data-value="4">&#9733;</span>
+                    <span class="star" data-value="5">&#9733;</span>
                 </div>
+                <p class="description">Administration und Verwaltung FortiGate 500E Series mit Forti OS</p>
             </div>
-            <div class="card">
-                <h3>Linux Kenntnisse</h3>
-                <div class="chart-container">
-                    <canvas id="linuxChart"></canvas>
-                    <div id="linuxPercentage" class="percentage">90%</div>
+            <div class="card" data-rating="5">
+                <h3>Konzeption Backup Systeme</h3>
+                <div class="rating-container">
+                    <span class="star" data-value="1">&#9733;</span>
+                    <span class="star" data-value="2">&#9733;</span>
+                    <span class="star" data-value="3">&#9733;</span>
+                    <span class="star" data-value="4">&#9733;</span>
+                    <span class="star" data-value="5">&#9733;</span>
                 </div>
+                <p class="description">Konzeption & Betrieb von Veeam Backupsysteme für OnPrem, Azure und M365 Umgebungen</p>
+            </div>
+            <div class="card" data-rating="5">
+                <h3>Verwaltung & Betrieb  Cloud vDC</h3>
+                <div class="rating-container">
+                    <span class="star" data-value="1">&#9733;</span>
+                    <span class="star" data-value="2">&#9733;</span>
+                    <span class="star" data-value="3">&#9733;</span>
+                    <span class="star" data-value="4">&#9733;</span>
+                    <span class="star" data-value="5">&#9733;</span>
+                </div>
+                <p class="description">Unterstützung beim Aufbau Azure vDC sowie Administration im täglichen Betrieb</p>
             </div>
         </div>
     </section>
