weitere Skills hinzugefügt

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -100,6 +100,28 @@
                 </div>
                 <p class="description">Unterstützung beim Aufbau Azure vDC sowie Administration im täglichen Betrieb</p>
             </div>
+            <div class="card" data-rating="3">
+                <h3>Administration Netzwerk</h3>
+                <div class="rating-container">
+                    <span class="star" data-value="1">&#9733;</span>
+                    <span class="star" data-value="2">&#9733;</span>
+                    <span class="star" data-value="3">&#9733;</span>
+                    <span class="star" data-value="4">&#9733;</span>
+                    <span class="star" data-value="5">&#9733;</span>
+                </div>
+                <p class="description">Betrieb Aruba WLAN & Cisco Netzwerkkomponente sowie Cloud VNets</p>
+            </div>
+            <div class="card" data-rating="3">
+                <h3>Betrieb und Administration WAF</h3>
+                <div class="rating-container">
+                    <span class="star" data-value="1">&#9733;</span>
+                    <span class="star" data-value="2">&#9733;</span>
+                    <span class="star" data-value="3">&#9733;</span>
+                    <span class="star" data-value="4">&#9733;</span>
+                    <span class="star" data-value="5">&#9733;</span>
+                </div>
+                <p class="description">Betrieb und erweiterte Adnministration Azure Application Gateway mit WAF</p>
+            </div>
         </div>
     </section>
     <section id="lebenslauf_section">
