--- a/CV_SiteContent/index copy 2.html
+++ b/CV_SiteContent/index copy 2.html
@@ -128,33 +128,52 @@
         <img src="bilder/SCR-20240703-svau.jpeg" alt="Lebenslauf Bild">
         <div class="lebenslauf_container">
             <h2>Bildung</h2>
-    
-            <div class="education_block">
-                <h3>Sprachen</h3>
-                <div class="language_item">
-                    <p class="language"><strong>Deutsch:</strong> Muttersprache</p>
-                    <p class="certification"><strong>Zertifizierung:</strong> Schulbildung</p>
-                </div>
-                <div class="language_item">
-                    <p class="language"><strong>Englisch:</strong> Sehr gut</p>
-                    <p class="certification"><strong>Zertifizierung:</strong> First B2</p>
-                </div>
-            </div>
-    
-            <div class="education_block">
-                <h3>Schulbildung</h3>
-                <div class="education_item">
-                    <p class="period"><strong>2009 bis 2014:</strong></p>
-                    <p class="details">Sekundarstufe E an der Oz13 Subingen</p>
-                </div>
-                <div class="education_item">
-                    <p class="period"><strong>2014 bis 2018:</strong></p>
-                    <p class="details">Informatiker EFZ an der GIBS Solothurn</p>
-                </div>
-                <div class="education_item">
-                    <p class="period"><strong>2023 bis 2026:</strong></p>
-                    <p class="details">Techniker HF an der HFTM Grenchen</p>
-                </div>
+            <h3>Sprachen</h3>
+            <table>
+                <tr>
+                    <th>Sprache</th>
+                    <th>Kenntnisse</th>
+                    <th>Zertifizierung</th>
+                </tr>
+                <tr>
+                    <td data-label="Sprache">Deutsch</td>
+                    <td data-label="Kenntnisse">Muttersprache</td> 
+                    <td data-label="Zertifizierung">Schulbildung</td> 
+                </tr>
+                <tr>
+                    <td data-label="Sprache">Englisch</td>
+                    <td data-label="Kenntnisse">Sehr gut</td> 
+                    <td data-label="Zertifizierung">First B2</td> 
+                </tr> 
+        </table>
+            <h3>Schulbildung</h3>
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Zeitraum</th>
+                            <th>Abschluss</th>
+                            <th>Schule</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td data-label="Zeitraum">2009 bis 2014</td>
+                            <td data-label="Abschluss">Sekundarstufe E</td> 
+                            <td data-label="Schule">Oz13 Subingen</td> 
+                        </tr>
+                        <tr>
+                            <td data-label="Zeitraum">2014 bis 2018</td>
+                            <td data-label="Abschluss">Informatiker EFZ</td> 
+                            <td data-label="Schule">GIBS Solothurn</td> 
+                        </tr>
+                        <tr>
+                            <td data-label="Zeitraum">2023 bis 2026</td>
+                            <td data-label="Abschluss">Techniker HF</td> 
+                            <td data-label="Schule">HFTM Grenchen</td> 
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
