bild First Nachweis entfernt und als Button bei Englisch hinzugefügt

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -125,35 +125,36 @@
         </div>
     </section>
     <section id="lebenslauf_section">
-        <img src="bilder/SCR-20240703-svau.jpeg" alt="Lebenslauf Bild">
         <div class="lebenslauf_container">
             <h2>Bildung</h2>
-    
-            <div class="education_block">
-                <h3>Sprachen</h3>
-                <div class="language_item">
-                    <p class="language"><strong>Deutsch:</strong> Muttersprache</p>
-                    <p class="certification"><strong>Zertifizierung:</strong> Schulbildung</p>
+            <div class="education_grid">
+                <div class="education_block">
+                    <h3>Sprachen</h3>
+                    <div class="language_item">
+                        <p class="language"><strong>Deutsch:</strong> Muttersprache</p>
+                    </div>
+                    <div class="language_item">
+                        <div class="language_text">
+                            <p class="language"><strong>Englisch:</strong> Sehr gut</p>
+                            <p class="certification"><strong>Zertifizierung:</strong> First B2</p>
+                        </div>
+                        <a href="bilder/SCR-20240703-svau.jpeg" target="_blank" class="certificate-button">Nachweis</a>
+                    </div>
                 </div>
-                <div class="language_item">
-                    <p class="language"><strong>Englisch:</strong> Sehr gut</p>
-                    <p class="certification"><strong>Zertifizierung:</strong> First B2</p>
-                </div>
-            </div>
-    
-            <div class="education_block">
-                <h3>Schulbildung</h3>
-                <div class="education_item">
-                    <p class="period"><strong>2009 bis 2014:</strong></p>
-                    <p class="details">Sekundarstufe E an der Oz13 Subingen</p>
-                </div>
-                <div class="education_item">
-                    <p class="period"><strong>2014 bis 2018:</strong></p>
-                    <p class="details">Informatiker EFZ an der GIBS Solothurn</p>
-                </div>
-                <div class="education_item">
-                    <p class="period"><strong>2023 bis 2026:</strong></p>
-                    <p class="details">Techniker HF an der HFTM Grenchen</p>
+                <div class="education_block">
+                    <h3>Schulbildung</h3>
+                    <div class="education_item">
+                        <p class="period"><strong>2009 bis 2014:</strong></p>
+                        <p class="details">Sekundarstufe E an der Oz13 Subingen</p>
+                    </div>
+                    <div class="education_item">
+                        <p class="period"><strong>2014 bis 2018:</strong></p>
+                        <p class="details">Informatiker EFZ an der GIBS Solothurn</p>
+                    </div>
+                    <div class="education_item">
+                        <p class="period"><strong>2023 bis 2026:</strong></p>
+                        <p class="details">Techniker HF an der HFTM Grenchen</p>
+                    </div>
                 </div>
             </div>
         </div>
