--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/werdegang.css">
     <link rel="stylesheet" href="CSS/knowhow.css">
     <link rel="stylesheet" href="CSS/hobbies.css">
+    <link rel="stylesheet" href="CSS/contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>CV JB HFTM</title>
@@ -27,7 +28,7 @@
                 </ul>
             </nav>
             <h1>Curriculum Vitae <br><span style="color: var(--main-brand-color)">Joel Bühler</span></h1>
-            <p class="subheading">Herzlich wilkommen auf meiner CV Webseite welche ich im Rahmen meines Studiums an der HFTM erarbeitet habe.</p>
+            <p class="subheading">Herzlich wilkommen auf meiner CV Webseite welche ich im Rahmen meines Studiums an der HFTM erarbeitet habe. <br><br> Mein Name ist Joel Bühler, ich komme aus Solothurn und bin ausgebildeter Informatik Systemtechniker EFZ und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center)</p>
         </div>
         <div class="circle">
             <img src="bilder/1701434086747.png" alt="Mugshot">
@@ -225,16 +226,28 @@
     </section>
     <section id="section_contact">
         <div class="contact_container">
-            <p>
-                Joel Bühler <br>
-                Narzissenweg 2 <br>
-                4528 Zuchwil <br>
-                Geburtsdatum: 25.05.1998<br>
-                <a href="mailto:buehler.joel@gmail.com">buehler.joel@gmail.com</a><br>
-                <a href="https://www.linkedin.com/in/joel-bühler-7017631b4">Linkedin</a>
-            </p>
-            <div class="contact_container">
-                <p>Karte Integrieren</p>
+            <div class="contact_info">
+                <h3>Kontaktinformationen</h3>
+                <p>
+                    Joel Bühler <br>
+                    Narzissenweg 2 <br>
+                    4528 Zuchwil <br>
+                    Geburtsdatum: 25.05.1998<br>
+                    <a href="mailto:buehler.joel@gmail.com">buehler.joel@gmail.com</a><br>
+                    <a href="https://www.linkedin.com/in/joel-bühler-7017631b4">Linkedin</a>
+                </p>
+            </div>
+            <div class="contact_map">
+                <h3>Standort</h3>
+                <p>Karte Integrieren</p> <!-- Hier kannst du später die tatsächliche Karte einfügen -->
+            </div>
+            <div class="contact_form">
+                <h3>Schreib mir eine Nachricht</h3>
+                <form id="contactForm">
+                    <input type="text" name="subject" placeholder="Betreff" required>
+                    <textarea name="message" placeholder="Nachricht" required></textarea>
+                    <button type="submit">Nachricht senden</button>
+                </form>
             </div>
         </div>
     </section>
