--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
             <h1>Curriculum Vitae <br><span style="color: var(--main-brand-color)">Joel Bühler</span></h1>
-            <p class="subheading">Wilkommen auf meiner CV Webseite, welche ich im Rahmen meines Studiums an der HFTM erarbeitet habe. <br><br> Mein Name ist Joel Bühler, ich komme aus Solothurn und bin ausgebildeter Informatik Systemtechniker EFZ und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center).</p>
+            <p class="subheading">Wilkommen auf meiner CV Webseite, welche ich im Rahmen meines Studiums an der HFTM erarbeitet habe. <br><br> Mein Name ist Joel Bühler, ich komme aus Solothurn und bin ausgebildeter Informatik Systemtechniker EFZ und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center)</p>
         </div>
         <div class="circle">
             <img src="bilder/1701434086747.png" alt="Mugshot">
