anpassungen für sendmail

--- a/CV_SiteContent/index.html
+++ b/CV_SiteContent/index.html
@@ -239,7 +239,7 @@
             </div>
             <div class="contact_map">
                 <h3>Standort</h3>
-                <p>Karte Integrieren</p> <!-- Hier kannst du später die tatsächliche Karte einfügen -->
+                <p>Karte Integrieren</p>
             </div>
             <div class="contact_form">
                 <h3>Schreib mir eine Nachricht</h3>
@@ -249,6 +249,11 @@
                     <button type="submit">Nachricht senden</button>
                 </form>
             </div>
+        </div>
+        <!-- Popup für Erfolg/Fehler -->
+        <div id="popup" class="popup">
+            <span id="popupMessage"></span>
+            <button id="closePopup">OK</button>
         </div>
     </section>
     <script src="script.js"></script>
