--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,10 @@
                     <span class="material-symbols-outlined">menu</span>
                 </label>
                 <ul>
+                    <li><a href="#knowhow_section">Technisches KnowHow</a></li>
                     <li><a href="#lebenslauf_section">Bildung</a></li>
-                    <li><a href="">Berufserfahrung</a></li>
-                    <li><a href="">Technisches KnowHow</a></li>
+                    <li><a href="#werdegang_section">Berufserfahrung</a></li>
+                    <li><a href="#section_contact">Kontakt</a></li>
                 </ul>
             </nav>
             <h1>Curriculum Vitae <br><span style="color: var(--main-brand-color)">Joel Bühler</span></h1>
@@ -215,31 +216,18 @@
             </div>
         </div>
     </section>
-    <section id="hobbies_section">
-        <h2>Hobbies & Freizeit</h2>
-        <div class="hobbies_container">
-            <div id="item1" class="grid_item">Bergsteigen</div>
-            <div id="item2" class="grid_item">Wandern</div>
-            <div id="item3" class="grid_item">Mountainbike</div>
-            <div id="item4" class="grid_item">Reiten</div>
-        </div>
-    </section>
     <section id="section_contact">
         <div class="contact_container">
             <div class="contact_info">
                 <h3>Kontaktinformationen</h3>
                 <p>
                     Joel Bühler <br>
-                    Narzissenweg 2 <br>
-                    4528 Zuchwil <br>
+                    Beispielweg X <br>
+                    4500 Solothurn <br>
                     Geburtsdatum: 25.05.1998<br>
                     <a href="mailto:buehler.joel@gmail.com">buehler.joel@gmail.com</a><br>
                     <a href="https://www.linkedin.com/in/joel-bühler-7017631b4">Linkedin</a>
                 </p>
-            </div>
-            <div class="contact_map">
-                <h3>Standort</h3>
-                <p>Karte Integrieren</p>
             </div>
             <div class="contact_form">
                 <h3>Schreib mir eine Nachricht</h3>
